Changelog
=========

0.9b1 (unreleased)
------------------

- allow original scale for slider view
  [vangheem]


0.8.1b1 (2012-02-16)
--------------------

- Add randomize feature
  [vangheem]

- allow drag n drop reordering of slides
  [vangheem]


0.8.0b2 (2012-02-15)
--------------------

- Ensure that users with the Site Administrator role can edit slider settings
  under Plone 4.1+.
  [davidjb]
- Fix failing test under Plone 3.
  [davidjb]
- Remove bottom border for navigation bullets under <= IE6.
  [davidjb]
- Allow active navigation bullets to change on slide transition under new
  *Navigation Bullets* layout.
  [davidjb]
- Added a new layout with bullets.
  [espenmn]
- Ensure slider JS selects only ``li`` elements that are slides. This fixes
  transition problems when lists are within slides.
  [davidjb]
- Fix IE 5/6 display issue with slider container showing overflow.
  [davidjb]
- Return an error if the user's attempt to move/remove a slide fails.
  This prevents unnecessary AJAX calls from the client to reload slides.
  [davidjb]
- Prevent index out of range error when attempting to move a slide down
  if that slide is already at the end.
  [davidjb]
- Simplify CSS for settings page as existing slider styles are now applicable.
  [davidjb]
- Change slider settings page to ensure that ``li`` slide elements are
  correctly wrapped in a ``ul`` by mimicking actual slider structures.  This
  fixes settings page issues under IE 6 and 7 by ensuring the page produces
  valid list markup.
  [davidjb]
- Add CSS class selectors for slider and slider containers rather than just
  ID-based selectors. This allows multiple slider structures on the same page
  (eg the settings page). Slider display templates continue to use ID-based
  structures.
  [davidjb]
- Style ``li`` elements on the Slider Settings page using specific class to
  avoid affecting lists within slides.
  [davidjb]
- Ensure ``ul`` elements within slides don't get styled by default.
  [davidjb]

