@@ -59,7 +59,7 @@ jQuery(document).ready(function(){
             '%(navigation_buttons_rendering_type)s',
         resume_play: %(resume_play)s,
         randomize: %(randomize)s,
-        hoverPause: %(hover_pause)s,
+        hoverPause: %(hover_pause)s
     });
 });
         """ % {
@@ -78,6 +78,5 @@ jQuery(document).ready(function(){
                 self.settings.navigation_buttons_rendering_type.lower(),
             'resume_play': str(self.settings.resume_play).lower(),
             'randomize': str(self.settings.randomize).lower(),
-            'hover_pause': str(self.settings.hover_pause).lower(),
-            
+            'hover_pause': str(self.settings.hover_pause).lower()
         }
